# LUDOgame

./: .gitignore  CMakeLists.txt  README.md
Domain-Code/: game.cpp  main.cpp  my_player.cpp  my_player.h  my_q_table.cpp  my_q_table.h  notes.txt  q_player.cpp  q_player.h  q_table.cpp  q_table.h
Domain-Code/backup/: q_player.cpp
Domain-Code/backup/SmallState_CompleteActions/: q_table.h
Domain-Code/backup/SmallState_ReducedActions/: q_player.cpp
Domain-Code/other_representations/LargeState_CompleteActions/: q_player.h
Domain-Code/other_representations/SmallState_AggressiveActions/: q_player.h  q_table.h
Domain-Code/other_representations/SmallState_CompleteActions/: q_player.cpp
Domain-Code/other_representations/SmallState_ReducedActions/: q_table.cpp
results/: test01.csv  test02.csv  test04.csv  test_2v2.csv  test_2v2_non_pretrained.csv  test_jajepVSelin.csv
